--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('partials/header1') %>
 <!-- <div class="make"> -->
   <div class="container position">
   <h1>Login</h1>
@@ -24,11 +24,10 @@
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
-
         </div>
       </div>
     </div>
-
+    
   </div>
 </div>
 </div>
