--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header1"); -%>
-<div class="make";>
+<div class="make">
     <h2><%= array2.title %></h2>
     <p style="text-align: right;"><strong><%= array2.date %></strong></p>
     <p><%= array2.post %></p>
