--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('partials/header1') %>
 <!-- <div class="make"> -->
   <!-- <div class="make"> -->
   <div class="container position"> 
