--- a/views/start.ejs
+++ b/views/start.ejs
@@ -1,9 +1,10 @@
-<%- include('partials/header') %>
+<%- include('partials/header1') %>
 
 
 <div class="jumbotron centered">
   <div class="container">
-    <i class="fa-solid fa-blog fa-4x"></i>
+    <!-- <i class="fa-solid fa-blog fa-4x"></i> -->
+    <img src="logo.png" style="height: 250px; width: 250px; border: 2px solid black;">
     <h1 class="display-3">Blog</h1>
     <p class="lead">Welcome to the Online Blog!</p>
     <hr>
