--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <div class="make">
     <h1><strong>Welcome <%= username %>!</strong></h1>
     <br/>
-    <p style="font-size: 30px;">Welcome to your Blog! See what's happening arround in the community.</p>
+    <p style="font-size: 30px;">Welcome to your Daily Blog! See what's happening arround in the community.</p>
     
     <br>
     <div class="text-center">
