--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Blog</title>
+  <title>Daily Blog</title>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
@@ -11,7 +11,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/home"><img src="/logo.png" style="height: 40px; width: 40px; border-radius: 50%;"> BLOG</a>
+        <a class="navbar-brand" href="/home"><img src="/logo.png" style="height: 40px; width: 40px; border-radius: 50%;"> DAILY BLOG</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
