--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
     <br>
     <div style="font-size: 20px; padding: 20px; font-weight:500">
     <p>According to the UN: 'Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers'. In the 21st century, Data is the new oil. Like oil, data is valuable, but if unrefined, it cannot really be used. It has to be changed into gas, plastic, chemicals, etc. to create a valuable entity that drives profitable activity. So, must data be broken down, analysed for it to transform it into valuable infomation. This online blogging platform is designed with the idea of letting free flow of information within the community. It lets the users share their positive valuable ideas with other fellow users via means of posts.</p>
-    <p>It is a maiden attempt by the developer to make a web application and will further incorporate features including liking, replying and rating of posts. In near future it can be used for discussion purposes, sharing experiences and home remedies.</p>
+    <p>It is a maiden attempt by the developer to make a web application and will further incorporate features including filter searching, liking, replying and rating of posts. In near future it can be used for discussion purposes, sharing experiences and home remedies.</p>
     </div>
 </div>
 <%- include("partials/footer"); -%>
