--- a/views/gstart.ejs
+++ b/views/gstart.ejs
@@ -3,11 +3,12 @@
     <h1>Getting Started</h1>
     <br>
     <div style="font-size: 20px; padding: 20px; font-weight:500">
-    <p>The user starts by registering and logging in the system. The user lands on the home page where all community posts are displayed with time stamps and the username of the user who posted the post. It is accessible by clicking the site tilte in the navbar.</p>
-    <p>Click the 'Compose' button to land to the compose page. Fill the title and Post's content and click the 'Publish' button to publish your post in the community. This post is updated both in the 'My Posts' and 'All post'.</p>
-    <p>Click the 'My Posts' button to see all the posts posted by you. You are provided with the option to delete the post you want, by clicking the 'Delete' button in this 'My Posts' section.</p>
+    <p>The user starts by registering and logging in the system. The user lands on the home page where all community posts are displayed with time stamps and the username of the user who posted the post. It is accessible by clicking the site title in the navbar.</p>
     <p>To read full post click the 'Read More' button and write comments if you want. Comments are updated on the same page.</p>
-    <p>You may anytime logout from the system by clicking the 'Log Out' button in the navbar.</p>
+    <p>In the profile section:</p>
+    <p>Click 'Compose' to land to the compose page. Fill the title and Post's content and click the 'Publish' button to publish your post in the community. This post is updated both in the 'My Posts' and 'All post'.</p>
+    <p>Click the 'My Posts' to see all the posts posted by you. You are provided with the option to delete the post you want, by clicking the 'Delete' button in this 'My Posts' section.</p>
+    <p>Click the 'Logout' button to logout anytime from the system.</p>
     </div>
 </div>
 <%- include("partials/footer"); -%>
