--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,14 @@
     <div style="font-size: 20px; padding: 20px; font-weight:500">
     <p>According to the UN: 'Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers'. In the 21st century, Data is the new oil. Like oil, data is valuable, but if unrefined, it cannot really be used. It has to be changed into gas, plastic, chemicals, etc. to create a valuable entity that drives profitable activity. So, must data be broken down, analysed for it to transform it into valuable infomation. This online blogging platform is designed with the idea of letting free flow of information within the community. It lets the users share their positive valuable ideas with other fellow users via means of posts.</p>
     <p>It is a maiden attempt by the developer to make a web application and will further incorporate features including filter searching, liking, replying and rating of posts. In near future it can be used for discussion purposes, sharing experiences and home remedies.</p>
+    <br>
+    <h4>Here are the steps for getting started:</h4>
+    <p>The user starts by registering and logging in the system. The user lands on the home page where all community posts are displayed with time stamps and the username of the user who posted the post. It is accessible by clicking the site title in the navbar.</p>
+    <p>To read full post click the 'Read More' button and write comments if you want. Comments are updated on the same page.</p>
+    <p>In the profile section:</p>
+    <p>Click 'Compose' to land to the compose page. Fill the title and Post's content and click the 'Publish' button to publish your post in the community. This post is updated both in the 'My Posts' and 'All post'.</p>
+    <p>Click the 'My Posts' to see all the posts posted by you. You are provided with the option to delete the post you want, by clicking the 'Delete' button in this 'My Posts' section.</p>
+    <p>Click the 'Logout' button to logout anytime from the system.</p>
     </div>
 </div>
 <%- include("partials/footer"); -%>
